# uop-core

./: pyproject.toml
docs/: internal.org  tasks.org
src/sjasoft/uop/: changeset.py  database.py  testing.py
src/sjasoft/uop/connect/: direct.py  uop_connect.py
src/sjasoft/uop/plugin_testing/: harness.py
src/uop/core/: __init__.py  async_database.py  async_db_collection.py  changeset.py  collections.py  constraints.py  database.py  db_collection.py  db_interface.py  db_service.py  query.py  services.py  tenant.py  testing.py  whatever.md
src/uop/core/async_path/: changeset.py  database.py  db_collection.py  db_interface.py  services.py
src/uop/core/connect/: direct.py  direct_async.py  generic.py  uop_connect.py  web.py
src/uop/core/plugin_testing/: harness.py
tests/: test_async_db_interface.py  test_changeset.py  test_db_interface.py  test_query.py  test_schemas.py  test_service.py  user_collections.py
