[project]
name = "uop-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Samantha Atkins", email = "samantha@conceptwareinc.com" }]
requires-python = ">=3.12"
dependencies = ["cryptography>=46.0.1"]

[project.scripts]
uop = "uop.core:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ipykernel>=6.30.1", "pytest>=8.4.2", "pytest-asyncio>=1.2.0"]
